--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--INTERNO-->
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
-    <script src="script/script.js"></script>
+    <script src="script/script.js" defer></script>
     <!--EXTERNO-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -17,33 +17,31 @@
 
 <body>
     <div class="container-fluid2">
-        <form id="formulario">
-            <main class="principal">
-                <div class="estrela">
-                    <img src="images/icon-star.svg" alt="Icone de estrela">
-                </div>
-                <div class="content">
-                    <h1>How Did we do?</h1>
+        <main class="principal">
+            <div class="estrela">
+                <img src="images/icon-star.svg" alt="Icone de estrela">
+            </div>
+            <div class="content">
+                <h1>How Did we do?</h1>
 
-                    <p>Please let us know how we did with your support request. All feedback is appreciated to help us
-                        improve our offering!</p>
-                </div>
-                <div id="botoes">
-                    <button class="buttons">1</button>
-                    <button class="buttons">2</button>
-                    <button class="buttons">3</button>
-                    <button class="buttons">4</button>
-                    <button class="buttons">5</button>
-                </div>
-                <div id="mainButton">
-                    <button class="mainButton" type="submit">SUBMIT</button>
-                </div>
-            </main>
-        </form>
-        <div class="thanks">
+                <p>Please let us know how we did with your support request. All feedback is appreciated to help us
+                    improve our offering!</p>
+            </div>
+            <div id="botoes">
+                <button class="buttons">1</button>
+                <button class="buttons">2</button>
+                <button class="buttons">3</button>
+                <button class="buttons">4</button>
+                <button class="buttons">5</button>
+            </div>
+            <div id="mainButton2">
+                <button id="mainButton" type="button">SUBMIT</button>
+            </div>
+        </main>
+        <div id="thanks">
             <div class="imagem">
                 <img src="images/illustration-thank-you.svg" alt="Imagem agradecimento">
-                <p class="selected">You selected * out of 5</p>
+                <p class="selected">You selected <span id="numeracao">*</span> out of 5</p>
             </div>
             <div class="agradecimento">
                 <h3>Thank You!</h3>
