--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!--INTERNO-->
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
-    <script src="script/script.js" defer></script>
+    <!-- <script src="script/script.js" defer></script> -->
+    <script src="script/script2.js" defer></script>
     <!--EXTERNO-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -28,11 +29,11 @@
                     improve our offering!</p>
             </div>
             <div id="botoes">
-                <button class="buttons">1</button>
-                <button class="buttons">2</button>
-                <button class="buttons">3</button>
-                <button class="buttons">4</button>
-                <button class="buttons">5</button>
+                <button class="buttons" id="one">1</button>
+                <button class="buttons" id="two">2</button>
+                <button class="buttons" id="three">3</button>
+                <button class="buttons" id="four">4</button>
+                <button class="buttons" id="five">5</button>
             </div>
             <div id="mainButton2">
                 <button id="mainButton" type="button">SUBMIT</button>
