--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <!--INTERNO-->
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
-    <!-- <script src="script/script.js" defer></script> -->
-    <script src="script/script2.js" defer></script>
+    <script src="script/script.js" defer></script>
     <!--EXTERNO-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
